update times
