# app/temp_files/openapi.json
@@ -902,6 +902,26 @@
               "format": "uuid",
               "title": "Shift Id"
             }
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 0,
+              "title": "Skip"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10,
+              "title": "Limit"
+            }
           }
         ],
         "responses": {
@@ -1815,24 +1835,20 @@
         ]
       }
     },
-    "/shifts/active-shifts/": {
+    "/shifts/active-shift/": {
       "get": {
         "tags": [
           "shifts"
         ],
-        "summary": "Get Active Shifts",
-        "operationId": "get_active_shifts_shifts_active_shifts__get",
+        "summary": "Get Active Shift",
+        "operationId": "get_active_shift_shifts_active_shift__get",
         "responses": {
           "200": {
             "description": "Successful Response",
             "content": {
               "application/json": {
                 "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/ShiftOut"
-                  },
-                  "type": "array",
-                  "title": "Response Get Active Shifts Shifts Active Shifts  Get"
+                  "$ref": "#/components/schemas/ShiftOut"
                 }
               }
             }
@@ -1868,16 +1884,6 @@
             }
           }
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ShiftStartUpdate"
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -3065,11 +3071,6 @@
       },
       "EmployeeShiftCreate": {
         "properties": {
-          "start_time": {
-            "type": "string",
-            "format": "date-time",
-            "title": "Start Time"
-          },
           "employee_id": {
             "type": "string",
             "format": "uuid",
@@ -3085,19 +3086,12 @@
         },
         "type": "object",
         "required": [
-          "start_time",
-          "employee_id",
-          "shift_id"
+          "employee_id"
         ],
         "title": "EmployeeShiftCreate"
       },
       "EmployeeShiftOut": {
         "properties": {
-          "start_time": {
-            "type": "string",
-            "format": "date-time",
-            "title": "Start Time"
-          },
           "employee_id": {
             "type": "string",
             "format": "uuid",
@@ -3115,26 +3109,29 @@
             "format": "uuid",
             "title": "Id"
           },
+          "active": {
+            "type": "boolean",
+            "title": "Active"
+          },
+          "start_time": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Start Time"
+          },
           "end_time": {
             "title": "End Time",
             "type": [
               "string",
               "null"
             ]
-          },
-          "active": {
-            "type": "boolean",
-            "title": "Active"
           }
         },
         "type": "object",
         "required": [
-          "start_time",
           "employee_id",
-          "shift_id",
           "id",
-          "end_time",
-          "active"
+          "active",
+          "start_time"
         ],
         "title": "EmployeeShiftOut"
       },
@@ -3144,17 +3141,9 @@
             "type": "boolean",
             "title": "Last Employee Shift",
             "default": false
-          },
-          "end_time": {
-            "type": "string",
-            "format": "date-time",
-            "title": "End Time"
           }
         },
         "type": "object",
-        "required": [
-          "end_time"
-        ],
         "title": "EmployeeShiftUpdate"
       },
       "HTTPValidationError": {
@@ -3488,8 +3477,7 @@
           "name",
           "category_id",
           "price",
-          "online_shop",
-          "image_url"
+          "online_shop"
         ],
         "title": "ProductCreate"
       },
@@ -3534,8 +3522,7 @@
         "type": "object",
         "required": [
           "product_id",
-          "count",
-          "product_order_id"
+          "count"
         ],
         "title": "ProductOrderUpdate"
       },
@@ -3554,19 +3541,19 @@
             "type": "string",
             "title": "Price"
           },
-          "image_url": {
-            "title": "Image Url",
-            "type": [
-              "string",
-              "null"
-            ]
-          },
           "online_shop": {
             "type": "boolean",
             "title": "Online Shop"
           },
           "category": {
             "$ref": "#/components/schemas/CategoryOut"
+          },
+          "image_url": {
+            "title": "Image Url",
+            "type": [
+              "string",
+              "null"
+            ]
           }
         },
         "type": "object",
@@ -3574,7 +3561,6 @@
           "id",
           "name",
           "price",
-          "image_url",
           "online_shop",
           "category"
         ],
@@ -3853,6 +3839,10 @@
             "format": "uuid",
             "title": "Id"
           },
+          "active": {
+            "type": "boolean",
+            "title": "Active"
+          },
           "start_time": {
             "title": "Start Time",
             "type": [
@@ -3866,34 +3856,14 @@
               "string",
               "null"
             ]
-          },
-          "active": {
-            "type": "boolean",
-            "title": "Active"
           }
         },
         "type": "object",
         "required": [
           "id",
-          "start_time",
-          "end_time",
           "active"
         ],
         "title": "ShiftOut"
-      },
-      "ShiftStartUpdate": {
-        "properties": {
-          "start_time": {
-            "type": "string",
-            "format": "date-time",
-            "title": "Start Time"
-          }
-        },
-        "type": "object",
-        "required": [
-          "start_time"
-        ],
-        "title": "ShiftStartUpdate"
       },
       "StoreItemCreate": {
         "properties": {
